2000-11-20  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* *: Plenty of `goodbye-warning's.

	* Makefile (clean): Don't delete leim-list.el

	* SKK-MK (SKK-MK-install-elc): Now leim-list.el and skk-setup.el
	is not the same file.

	* leim-list.el: New file.

	* skk-setup.el.in: Move XEmacs related codes to skk-xemacs.el.
	Move isearch related codes to skk-isearch.el.

2000-11-19  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* SKK-MK (SKK_MODULES): Add `skk-e21'.

	* skk-e21.el: New file.

	* skk-jisx0201.el, skk-macs.el: Modify for skk-e21.el.

	* skk-macs.el (skk-update-modeline): New function.
	(skk-update-modeline-with-extent): Abolish.

	* skk-vars.el (skk-modeline-input-mode, skk-default-indicator,
	skk-latin-mode-indicator, skk-hiragana-mode-indicator,
	skk-katakana-mode-indicator, skk-jisx0208-latin-mode-indicator,
	skk-jisx0201-mode-indicator, skk-abbrev-mode-indicator): New
	variables.

	* skk-xemacs.el (skk-xemacs-prepare-modeline-properties): Rename
	from `skk-xemacs-prepare-extents'.

	* skk.el (skk-setup-modeline): Add `skk-modeline-input-mode'
	instead of `skk-input-mode-string' to `mode-line-format'.

2000-11-19  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* skk-version.el (skk-version): Change its argument meaning.  If
	WITHOUT-CODENAME is non-nil, simply return SKK version.  If nil
	return the version with its codename.

	* SKK-MK (SKK-MK-what-where-package): Remove skk-autoloads from
	SKK_MODULES.
	(SKK-MK-install-elc): Set up setup.el.in for SKK_TUTORIALS
	even if SKK_DICTIONARIES is nil.
	(SKK-MK-install-package): Ditto.  Call error in the top of
	the function if running emacs does not have feature xemacs.
	(SKK-MK-make-setup-file): Do not eval 1th of SPEC.

	* Makefile (tar): Change ddskk-$(VERSION) to ddskk$(VERSION) for
	file name of tar ball.
	(SNAPBASE): Replace ddskk-`$(DATE) '+%Y%m%d' with
	`ddskk`$(DATE) '+%Y%m%d'`.
	
2000-11-19  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* SKK-MK (SKK_MODULES): Add `skk-xemacs'.
